# census-spain

./: .envrc  .gitignore  0_censo_personas_to_parquet.ipynb  CUSTOMER_DATA_JOIN.md  DATA_SOURCES.md  EDA_REGIONAL_FINDINGS.md  GENERATED_DATA.md  INEATLAS_DOCUMENTATION.md  INE_ADRH_DATA_DOCUMENTATION.md  INE_CENSUS_2021_DOCUMENTATION.md  README.md  TODO.md  adrh_secciones.py  censo2021_fix.py  censo_personas_checksums.sha256  compress_and_upload_censo_personas.sh  compress_and_upload_ine_adrh.sh  download_adrh_remaining.py  download_censo2021.py  download_ine_adrh.py  eda_adrh.ipynb  eda_censo2021.ipynb  eda_census.ipynb  eda_ineatlas.ipynb  ine_census.ipynb  ine_census_2021_checksums.sha256  ine_download.py  ine_find_links.py  ine_inspect_page.py  ine_verify_links.py  letter_to_sales.md  pyproject.toml  request_to_sales.txt  verify_ine_adrh_s3.sh
