[tool.poetry]
name = "direct-marketing-japan"
version = "0.1.0"
description = ""
authors = ["Slovikovskaya <vslovik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
requests = "^2.32.0"
jupyterlab = "^4.5.2"
ipykernel = "^7.1.0"
playwright = "^1.58.0"
zstd = "^1.5.7.3"
boto3 = "^1.43.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"